@@ -36,6 +36,7 @@ Import-Package: javax.activation;version="1.1.1";resolution:=optional,
  org.restlet.engine.header,
  org.restlet.engine.io,
  org.restlet.engine.local,
+ org.restlet.engine.resource,
  org.restlet.engine.security,
  org.restlet.engine.util,
  org.restlet.representation,
