@@ -5,3 +5,7 @@ Changes log
 
 - @version-full@ (@release-date@)
     - Bug fixed
+
+    - API changes
+      - Added a resource client to the JAX-RS extension.
+        Contributed by Shaun Elliott.
